    * smarter focus handling when user input is irrelevant to the current focus
      but relevant to another widget
    * menus can now stay scrolled to the bottom if they were already scrolled
      to the bottom
    * scrolling performance improved
    * selecting a units is faster now, especially switching between two units
    * overall game performance improved when many units are visible
 * WML engine
    * fixed a bug which returned wrong values if a random number was negative

Version 1.2.1:
 * campaigns:
   * Heir to the Throne:
     * Battle_for_Wesnoth: allow Asheviere to recruit non-scout units
   * The South Guard:
     * Proven by the Sword: tell Deoran to go to Westin if the citadel is
       secured (fixes #7360)
 * language and i18n:
   * updated translations: British English, Dutch, Estonian, French, German,
     Italian, Russian, Slovak, Swedish
   * fixed huge list of spelling mistakes in the en_US version
 * multiplayer maps:
   * revised maps: Blitz
   * made the AI recruit less scouts by setting the village_per_scout parameter
 * bug fix
   * correctly use translated team names when available
   * fix the completion when controlling multiple sides (bug #8101, patch #653)
   * first turn of a game is saved again (fixes bug #7909 and bug #8117)
    * fix female units using male frames from time to time
 * sound
   * add advanced sound tab to pref allowing you to play with sample_rate and
     buffer_size options
   * set default sample rate to 44100 hz as most user got cracking sound pb
     with 22050
 * graphics
   * units:
     * death animations for Orcish Assassin and Grunt, Undead Ghoul
 * multiplayer
   * game management
     * fixed controler change not sended to all client (bug #8138)
     * replace "Downloading next level..." by "Receiving data..."
       when scenario don't have next_scenario and replace
       "Downloading next level..." by "Downloading next scenario..."

Version 1.2:
 * campaigns:
   * Two Brothers: